# OliveCapstone

./: .gitignore  BBFS_UG.docx  FoodshareListView.swift  FoodshareStore.swift  README.md  docker-compose.yml  manage.sh
.github/workflows/: backend-ci.yml  frontend-tests.yml
BBFS.xcworkspace/: contents.xcworkspacedata
BlackBearFoodShare/Models/: BuildingLocator.swift
BlackBearFoodShare/Views/: CreateFoodshare.swift
backend/: Dockerfile  Makefile  app.py  database.py  database_objects.py  generate_flamegraph.sh  locustfile.py  pyproject.toml  requirements.txt  run_locust.sh  run_stress_backend.sh  seed_db.py  test_tokens.txt
backend/src/: __init__.py  app.py  auth_routes.py  core.py  database.py  database_helpers.py  email_routes.py  email_service.py  email_verification.py  image_utils.py  schema.sql  service.py  storage.py  tokens.py
backend/src/bbfs-backend/: app.py  database.py
backend/src/sql/: init_tables.sql
backend/tests/: conftest.py  test_EmailValidation.py  test_app_utils.py  test_auth_flow.py  test_auth_me.py  test_authenticated_routes.py  test_database.py  test_database_helpers.py  test_emailRoutes.py  test_foodshare_routes.py  test_image_utils_unit.py  test_security.py  test_storage.py  test_storage_service.py  test_survey_routes.py
frontend/BlackBearFoodShare/BlackBearFoodShare/: AppDelegate.swift  BlackBearFoodShareApp.swift  Info.plist  SData.swift
frontend/BlackBearFoodShare/BlackBearFoodShare.xcodeproj/: project.pbxproj
frontend/BlackBearFoodShare/BlackBearFoodShareTests/: AuthViewModelTests.swift  (+2 more)
nginx/vhost.d/: default
(+39 files in other folders)
