[project]
name = "bbfs-backend"
version = "0.1.0"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "UP", "ASYNC"] # Add "D" later when writing documentation

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto" # Needed for Quart
testpaths = ["tests"]
pythonpath = ["src"]
